[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "turtleconverter"
version = "1.3.2"
keywords = ["markdown", "mkdocs", "html", "converter", "jinja2"]
description = "A slow and inefficient markdown to html converter using mkdocs"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Sondre Grønås" }]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
]

dependencies = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-callouts",
    "mkdocs-minify-plugin",
    "mkdocs-glightbox",
    "mdx-breakless-lists@git+https://github.com/sondregronas/mdx-breakless-lists@master",
    "md-img-syntax-converter@git+https://github.com/sondregronas/mkdocs-md-img-syntax-converter@main"
]

[project.urls]
homepage = "https://github.com/sondregronas/turtleconverter"

[tool.setuptools.package-data]
turtleconverter = ['overrides/*', 'overrides/javascripts/*', 'overrides/stylesheets/*', 'mkdocs.yml']
